# ESPResso-service

./: .env.example  .gitignore  Dockerfile  README.md  README_model.md  docker-compose.yml  espresso_models  pyproject.toml  start.sh
app/: config.py  main.py
app/api/: deps.py  router.py
app/api/v1/: __init__.py  health.py  predict.py
app/api/v1/schemas/: __init__.py  request.py  response.py
app/middleware/: __init__.py  api_key_auth.py  brand_auth.py  rate_limiter.py  request_logging.py
app/models/: loader.py  predictor.py
app/normalization/: cache.py  category_normalizer.py  material_normalizer.py  nim_client.py  nim_key_pool.py  step_normalizer.py  synonym_map.py
app/pipeline/: batch_utils.py  bulk_normalizer.py  data_mapper.py  orchestrator.py
app/supabase/: __init__.py  client.py  product_fetcher.py  result_writer.py
docs/: AVELERO_CHANGES.md  gcloud-deployment.md
migrations/: 001_add_carbon_components.down.sql  001_add_carbon_components.up.sql  002_add_packaging_transport.down.sql  002_add_packaging_transport.up.sql  003_add_rls_policies.down.sql  003_add_rls_policies.up.sql  migrate.py
scripts/: batch_predict.py  local_test.py
tests/: conftest.py  test_api.py  test_data_mapper.py  test_middleware.py  test_nim_key_pool.py  test_normalization.py  test_pipeline.py  test_security.py
